# bayt-alhikmah

./: .air.toml  .env.example  .gitignore  AuthEndpoints.cs  BaytAlHikmah.sln  Containerfile  DapperContext.cs  Directory.Packages.props  Dockerfile  Makefile  Makefile.bak  Program.cs  README.md  Tiltfile  User.cs  WeatherForecast.cs  appsettings.json  bayt-alhikmah.csproj  bayt-alhikmah.http  bayt-alhikmah.sln  compose.yaml  docker-compose.override.yml  docker-compose.telemetry.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  json.go  justfile  pyproject.toml  sqlc.yaml
Controllers/: WeatherForecastController.cs
Properties/: launchSettings.json
albayt/: go.mod
alhakeem/: main.ipynb  main.py  pyproject.toml
backend/: README.md  pyproject.toml
bruno/: README.md  bruno.json
client/: package-lock.json  package.json
config/: config.yaml  rbac_policy.csv
ent/: client.go  ent.go  mutation.go  passwordtoken.go  passwordtoken_create.go  passwordtoken_delete.go  passwordtoken_query.go  passwordtoken_update.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
frontend/: .cta.json  .dockerignore  Containerfile  README.md  biome.json  components.json  package-lock.json  package.json  remix.config.js  server.mjs  vite.config.ts
gateway/: krakend.json
hakeem/: .gitignore  README.md  main.ipynb  main.py  pyproject.toml
migrations/: 000001_create_books_table.up.sql  000001_initial.down.sql  000001_initial.up.sql  000002_add_oauth_fields.down.sql  000002_add_oauth_fields.up.sql  00001_initial.sql  00002_user_library_items.sql  00003_books_and_contributors.sql  00004_reviews_one_per_source.sql  00005_collection_indexes.sql  00006_remove_legacy_authors.sql
model/: app.py  pyproject.toml
pkg/: health.go
src/bahith/: Dockerfile  README.md  go.mod  main.py  pyproject.toml
src/bahith/app/api/: __init__.py  scrape.py
src/bahith/app/core/: config.py  kafka.py  logging.py
src/bahith/app/domain/: schemas.py
src/bahith/app/scraper/: base.py
(+417 files in other folders)
