[project]
name = "bayt-alhikmah"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "El Zubeir Huweidi", email = "zubeir.huweidi@gmail.com" }
]
dependencies = [
    "fastapi[standard]>=0.112.2",
    "sqlmodel>=0.0.22",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bayt_alhikmah"]
